tests/ui/internal/unstable-feature-bound.stderr
error[E0646]: `main` function is not allowed to have a `where` clause
  --> $DIR/unstable-feature-bound.rs:10:10
   |
LL | fn main() {
   |          ^ `main` cannot have a `where` clause

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0646`.
